{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 30,
  "lineage": "1935bde8-1550-16b5-ea9d-45c923f513d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b98af4f988000c2",
            "arn": "arn:aws:ec2:us-east-1:581797537505:elastic-ip/eipalloc-03b98af4f988000c2",
            "domain": "vpc",
            "id": "eipalloc-03b98af4f988000c2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-184-72-177-174.compute-1.amazonaws.com",
            "public_ip": "184.72.177.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-eip-1",
              "Project": "DevOps-End-to-End"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089cd7fc79bdddd08",
            "arn": "arn:aws:ec2:us-east-1:581797537505:elastic-ip/eipalloc-089cd7fc79bdddd08",
            "domain": "vpc",
            "id": "eipalloc-089cd7fc79bdddd08",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-73-61-0.compute-1.amazonaws.com",
            "public_ip": "52.73.61.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cluster-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-eip-2",
              "Project": "DevOps-End-to-End"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:internet-gateway/igw-09eed644af25e9976",
            "id": "igw-09eed644af25e9976",
            "owner_id": "581797537505",
            "tags": {
              "Name": "devops-cluster-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-igw",
              "Project": "DevOps-End-to-End"
            },
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b98af4f988000c2",
            "association_id": "eipassoc-00646feaf241fdd11",
            "connectivity_type": "public",
            "id": "nat-096af3a9fa643f3d6",
            "network_interface_id": "eni-04dc5603d77170c0e",
            "private_ip": "10.0.1.23",
            "public_ip": "184.72.177.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0075cf3c6ed846177",
            "tags": {
              "Name": "devops-cluster-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-nat-gateway-1",
              "Project": "DevOps-End-to-End"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089cd7fc79bdddd08",
            "association_id": "eipassoc-0e8a64c02a862bd82",
            "connectivity_type": "public",
            "id": "nat-0fbd79e089d781c5f",
            "network_interface_id": "eni-0303f4fddd90cb5b4",
            "private_ip": "10.0.2.50",
            "public_ip": "52.73.61.0",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05e002db904150421",
            "tags": {
              "Name": "devops-cluster-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-nat-gateway-2",
              "Project": "DevOps-End-to-End"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:route-table/rtb-04b6d8998961bdb55",
            "id": "rtb-04b6d8998961bdb55",
            "owner_id": "581797537505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-096af3a9fa643f3d6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-private-rt-1",
              "Project": "DevOps-End-to-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:route-table/rtb-0de518f9cf94bac25",
            "id": "rtb-0de518f9cf94bac25",
            "owner_id": "581797537505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fbd79e089d781c5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-private-rt-2",
              "Project": "DevOps-End-to-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:route-table/rtb-0ada6deb7433cb36a",
            "id": "rtb-0ada6deb7433cb36a",
            "owner_id": "581797537505",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09eed644af25e9976",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cluster-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-public-rt",
              "Project": "DevOps-End-to-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f0fbe3271aa365d",
            "route_table_id": "rtb-04b6d8998961bdb55",
            "subnet_id": "subnet-084f7421460474092"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b1306d1c1c64a98",
            "route_table_id": "rtb-0de518f9cf94bac25",
            "subnet_id": "subnet-0bd474b72a88d5f9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e8dcf9ea0d2c642",
            "route_table_id": "rtb-0ada6deb7433cb36a",
            "subnet_id": "subnet-0075cf3c6ed846177"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0064ad51327e2410b",
            "route_table_id": "rtb-0ada6deb7433cb36a",
            "subnet_id": "subnet-05e002db904150421"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:security-group/sg-0509c40f5d10d009e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0509c40f5d10d009e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-cluster-cluster-sg20250912171351253700000005",
            "name_prefix": "devops-cluster-cluster-sg",
            "owner_id": "581797537505",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cluster-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-cluster-sg",
              "Project": "DevOps-End-to-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:subnet/subnet-084f7421460474092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f7421460474092",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581797537505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-private-subnet-1",
              "Project": "DevOps-End-to-End",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:subnet/subnet-0bd474b72a88d5f9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd474b72a88d5f9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581797537505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-private-subnet-2",
              "Project": "DevOps-End-to-End",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:subnet/subnet-0075cf3c6ed846177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0075cf3c6ed846177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581797537505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-public-subnet-1",
              "Project": "DevOps-End-to-End",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:subnet/subnet-05e002db904150421",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e002db904150421",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "581797537505",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cluster-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-public-subnet-2",
              "Project": "DevOps-End-to-End",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-068b3d55363c876aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:581797537505:vpc/vpc-068b3d55363c876aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02732d6425387e1ac",
            "default_route_table_id": "rtb-0136b8b143ecb6874",
            "default_security_group_id": "sg-0a46a15ff3238a9f9",
            "dhcp_options_id": "dopt-0eb0f48db64f59280",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068b3d55363c876aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0136b8b143ecb6874",
            "owner_id": "581797537505",
            "tags": {
              "Name": "devops-cluster-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "devops-cluster-vpc",
              "Project": "DevOps-End-to-End"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}